--- a/index.html
+++ b/index.html
@@ -288,9 +288,8 @@
                 <div class="container" >
                 <div class="row">
                       <div class="col-md-7 " >
-                                    <div class="alt-font  text-extra-dark-gray  margin-15px-bottom abouttext"  id = 'content2'>
-                                    About<span class="unhideit"></br></span>
-                                    Reach heART <span id="updated2"></div>
+                                     <div class="alt-font  text-extra-dark-gray  margin-15px-bottom"  style='font-family: Patrick Hand;  font-size: 45px ;font-weight:900; line-height:40px'>About</span><span class="unhideit"></br></span><span style= "font-family:Comic Neue;"> Reach he</span><span id = 'content2'>ART </span> <span id="updated2"> </span></div>
+
                                     <div class="separator-line-horrizontal-medium-light bg-deep-pink margin-10px-top"></div>
                                     <div class="col-md-12 wow fadeInRight " style="padding-bottom: 20px">
                                       <p class="text-medium text-extra-dark-gray  line-height-28 margin-30px-top"  style='font-family: Didact Gothic; font-size: 25px; font-weight:300;margin-bottom:40px;line-height:40px'><span style= "font-family:Comic Neue;font-weight:900">Reach heART</span>
@@ -541,68 +540,24 @@
                   </div>
               </div>
           </div>
-            <div id='contact' ></div>
+          <div id='contact' data-color="6"  ></div>
         </section>
 
 
 
 
-<!--         <section class="wow fadeIn color-code pt-0 lg-no-background-img sm-padding-50px-tb" data-color="6" style="background: url('images/.png') left bottom no-repeat " id='events'> -->
-<!--              <div class="container" style='margin-top: 20px; padding-bottom:0px'> -->
-
-<!--               <div class="row justify-content-center"> -->
-<!--                   <div class="col-12 col-lg-9 col-md-10 text-center"> -->
-<!--                     <div class="alt-font  margin-15px-bottom"  style='font-family: Didact Gothic;color:black;  font-size: 35px ;font-weight:900; '> <span > Special Events </span> -->
-<!--                       <div align='center' style='padding-bottom:20px'><div class="separator-line-horrizontal-medium-light bg-deep-pink "style='margin-top: 30px'></div></div> -->
-<!--                   </div> -->
-<!--                   </div> -->
-<!--                </div> -->
-<!--         <div class="row"> -->
-<!--         <div class="col-md-12" style="margin-top:50px"> -->
-<!--                 <div class=" page-title-medium text-center d-flex flex-column justify-content-center" > -->
-<!--                     <div class="row justify-content-center m-0"> -->
-<!--                                 <div class="testimonia-block width-90 sm-width-100 mx-auto" > -->
-<!--                                     <div class="bg-white text-center padding-60px-all border-radius-6 sm-padding-20px-all" style='box-shadow: none; border-radius:0px;'  > -->
-<!--                                         <a href='https://my.coachart.org/give/305188/?fbclid=IwAR12463RI5Nipe8LK7yHTymlCyUVt6pLAki33gnZgZClmHESxNfaGvRFIuo#!/donation/checkout'><button  class="btn-info btn btn-small button border-radius-4 margin-5px-all lg-margin-15px-bottom d-table d-lg-inline-block md-margin-lr-auto" style="font-size:17px; font-family:Didact Gothic; margin-bottom:20px">  -->
-<!--                                      Click Here to Register  -->
-<!--                                             </button></a> -->
-<!--                                     <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:Didact Gothic; font-size:25px;padding-top: 30px; color:black; font-weight:900'> After School Art! </span> --> -->
-<!--                                       <div class= 'row' style='padding-left: 25px;padding-right: 25px; padding-bottom:10px; padding-top:0px; background:white; '> -->
-<!--                                       <div class = "col-md-12" style='padding-top:10px'> -->
-<!--                                       <img src="images/halloween.jpg"  > -->
-<!--                                       </div> -->
-<!--                                       </div> -->
-<!--                                     </div> -->
-<!--                     </div> -->
-<!--                 </div> -->
-<!--             </div> -->
-<!--            </div> -->
-<!--           </div> -->
-<!--         </section> -->
 
 
 
-
-      <section class="wow fadeIn color-code lg-no-background-img " data-color="6" style="background: url('images/art2.png') top right no-repeat ; ">
+      <section class="wow fadeIn color-code lg-no-background-img " data-color="6" style="background: url('images/art2.png') top right no-repeat ; " data-color="6" >
             <div class="container" style='margin-top:0px'>
                 <div class="row justify-content-center">
-                  <div class="col-12 col-lg-9 col-md-10 text-center ">
-                    <span class="alt-font text-medium margin-5px-bottom d-block pointsection"  ><span style="color:white">Contact Us!</span></span><br><br>
+                  <div class="col-12 col-lg-9 col-md-10 text-center " data-color="6" >
+                    <span class="alt-font text-medium margin-5px-bottom d-block pointsection" style="background-color:#3ec1d3!important; padding:30px" ><span style="color:white">Contact Us!</span></span><br><br>
                   </div>
 
-                <!-- <form id="contact-form" action="javascript:void(0)" method="post"> -->
-                    <!-- <div class="row justify-content-center"> -->
-                        <!-- <div class="col-12 col-lg-8 input-border-white text-center" style="font-family: Didact Gothic; font-size: 40px; font-weight:900"> -->
-                            <!-- <div id="success-contact-form" class="mx-0"></div> -->
-                            <!-- <input type="text" name="name" id="name" placeholder="Name*" class="input-border-bottom  border-white-light" style="font-size:30px"  > -->
-                            <!-- <input type="text" name="email" id="email" placeholder="E-mail*" class="input-border-bottom border-white-light" style="font-size:30px"> -->
-                            <!-- <input type="text" name="subject" id="subject" placeholder="Subject" class="input-border-bottom border-white-light" style="font-size:30px"> -->
-                            <!-- <textarea name="comment" id="comment" placeholder="Your Message" class="input-border-bottom border-white-light" style="font-size:30px"></textarea> -->
-                            <!-- <button id="contact-us-button" type="submit" class="btn btn-large btn-white sm-margin-15px-top" style = '; font-family:Didact Gothic'>send message</button> -->
-                        <!-- </div> -->
-                    <!-- </div> -->
-                <!-- </form> -->
-                <div class="col-md-12 col-lg-9 col-md-10 text-center " style="background-color:#3ec1d3!important">
+            
+                <div class="col-md-12 col-lg-9 col-md-10 text-center " style="background-color:#3ec1d3!important; padding:30px" data-color="6" >
                     <div> <a href="mailto:reach1heart@gmail.com?subject=Mail" class='emailfont '> reach1heart@gmail.com </a> </div>
                     <a href="https://www.facebook.com/REACH-HEART-102506281403707" title="Facebook" target="_blank"><i class="fab fa-facebook" aria-hidden="true" style='font-size: 50px; padding:10px; margin-top:30px; color:white'></i></a>
                     <a href="https://www.instagram.com/reach1heart/" title="Dribbble" target="_blank"><i class="fab fa-instagram "  style='font-size: 50px; padding:10px; margin-top:30px; color:white'></i></a>
@@ -701,21 +656,24 @@ var color = (toStr.replace('\/g', '|')).substring(1);
 var colors = color.split("|");
 
 if (colors.indexOf("red") > -1) {
-    str = str.replace(/A/g, '<span style="color:#ff165d;font-family:Comic Neue;">A</span>');
+    str = str.replace(/A/g, '<span style="color:#ff165d;font-family:Comic Neue;position:relative; right:-3px">A</span>');
 }
 
 if (colors.indexOf("blue") > -1) {
-    str = str.replace(/R/g, '<span style="color:#3ec1d3;font-family:Comic Neue;">R</span>');
+    str = str.replace(/R/g, '<span style="color:#3ec1d3;font-family:Comic Neue; right:-3px">R</span>');
 }
 
 if (colors.indexOf("orange") > -1) {
-    str = str.replace(/T/g, '<span style="color:#ff9a00;font-family:Comic Neue;">T</span>');
+    str = str.replace(/T/g, '<span style="color:#ff9a00;font-family:Comic Neue; right:-3px">T</span>');
 }
 if (colors.indexOf("green") > -1) {
-    str = str.replace(/About Reach he/g, '<span style="color:black;font-family:Comic Neue;">About Reach he</span>');
+    str = str.replace(/about reach he/g, '<span style="color:black;font-family:Comic Neue;">About Reach he</span>');
 }
 
+
+
 document.getElementById("updated2").innerHTML = str;
+
 
 
 
