--- a/index.html
+++ b/index.html
@@ -559,14 +559,14 @@
             <div class="container" style='margin-top:0px'>
                 <div class="row justify-content-center">
                   <div class="col-12 col-lg-9 col-md-10 text-center " data-color="6" >
-                    <span class="alt-font text-medium margin-5px-bottom d-block pointsection"  ><span style="color:white;background-color:#3ec1d3;">Contact Us!</span></span><br><br>
+                    <span class="alt-font text-medium margin-5px-bottom d-block pointsection"  ><span style="color:white;" class="shadow20" >Contact Us!</span></span><br><br>
                   </div>
 
             
                 <div class="col-md-12 col-lg-9 col-md-10 text-center "data-color="6" >
-                    <div> <a href="mailto:reach1heart@gmail.com?subject=Mail" class='emailfont '> reach1heart@gmail.com </a> </div>
-                    <a href="https://www.facebook.com/REACH-HEART-102506281403707" title="Facebook" target="_blank"><i class="fab fa-facebook" aria-hidden="true" style='font-size: 50px; padding:10px; margin-top:30px; color:white;background-color:#3ec1d3;'></i></a>
-                    <a href="https://www.instagram.com/reach1heart/" title="Dribbble" target="_blank"><i class="fab fa-instagram "  style='font-size: 50px; padding:10px; margin-top:30px; color:white;background-color:#3ec1d3;'></i></a>
+                    <div> <a href="mailto:reach1heart@gmail.com?subject=Mail" class='emailfont shadow20'> reach1heart@gmail.com </a> </div>
+                    <a href="https://www.facebook.com/REACH-HEART-102506281403707" title="Facebook" target="_blank"><i class="fab fa-facebook shadow20" aria-hidden="true" style='font-size: 50px; padding:10px; margin-top:30px; color:white;'></i></a>
+                    <a href="https://www.instagram.com/reach1heart/" title="Dribbble" target="_blank"><i class="fab fa-instagram shadow20"  style='font-size: 50px; padding:10px; margin-top:30px; color:white;'></i></a>
                 </div>
                 </div>
             </div>
@@ -580,10 +580,10 @@
           <footer class="footer-center-logo padding-five-tb sm-padding-30px-tb">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-12 col-md-12 text-center text-white-2 " style="font-weight:900; font-family:Didact Gothic; font-size:17px">
-                        <span>Website Design:<a href="https://calibri.co/" class="text-white-2" target="_blank" title=""> Calibri Inc.</a></span><br>
-                        <span> <a href="mailto:info@calibri.co?subject=Mail" class="text-white-2" target="_blank" title=""> info@calibri.co </a></span>
-                        <span>|<a href="https://calibri.co/" class="text-white-2" target="_blank" title=""> calibri.co</a></span><br>
+                    <div class="col-lg-12 col-md-12 text-center text-white-2 shadow20" style="font-weight:900; font-family:Didact Gothic; font-size:17px">
+                        <span>Website Design:<a href="https://calibri.co/" class="text-white-2 shadow20" target="_blank" title=""> Calibri Inc.</a></span><br>
+                        <span> <a href="mailto:info@calibri.co?subject=Mail" class="text-white-2 shadow20" target="_blank" title=""> info@calibri.co </a></span>
+                        <span>|<a href="https://calibri.co/" class="text-white-2 shadow20" target="_blank" title=""> calibri.co</a></span><br>
                     </div>
                 </div>
             </div>
@@ -753,6 +753,9 @@ display:none
   padding: 20px !important;
 }
 
+.shadow20 {
+  text-shadow: 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3, 0 0 4px #3ec1d3;
+}
 
 }
 @media only screen and (max-width: 480px) {
