--- a/index.html
+++ b/index.html
@@ -378,34 +378,28 @@
 
     <section class="wow fadeIn color-code pt-0 lg-no-background-img sm-padding-50px-tb" data-color="3" style="background: url('images/.png') left bottom no-repeat" id='lessons'>
          <div class="container" style='margin-top: 80px; padding-bottom:0px'>
-          <div class="row justify-content-center">
+            <div class="row justify-content-center">
               <div class="col-12 col-lg-9 col-md-10 text-center">
                 <div class="alt-font  margin-15px-bottom pointsection" > <span > Current Group Classes </span>
-                  <div align='center' style='padding-bottom:20px'><div class="separator-line-horrizontal-medium-light "style='background-color:#3ec1d3;margin-top: 30px'></div></div>
+                  <div align='center' style='padding-bottom:20px'>
+                   <div class="separator-line-horrizontal-medium-light "style='background-color:#3ec1d3;margin-top: 30px'></div>
+                  </div>
               </div>
-              </div>
+             </div>
            </div>
-    <div class="row">
-    <div class="col-md-12" style="margin-top:50px">
-            <div class=" page-title-medium text-center d-flex flex-column justify-content-center" >
-                <div class="row justify-content-center m-0">
-                            <div class="testimonia-block width-90 sm-width-100 mx-auto" >
-                                <div class="bg-white text-center padding-60px-all border-radius-6 sm-padding-20px-all" style='box-shadow: none; border-radius:0px;'  >
-                                  <div class= 'row' style=' padding-bottom:10px; padding-top:10px; background:white; '>
-                                 
-                                  <div class = "col-md-12" align='center>
+            <div class="row">
+                 <div class="bg-white text-center padding-60px-all border-radius-6 sm-padding-20px-all" style='box-shadow: none; border-radius:0px;margin-top:50px'  >
+                     <div class= 'row' style=' padding-bottom:10px; padding-top:10px; background:white; '>
+                            <div class = "col-md-12" align='center'>
                                     <button  class="btn-info btn btn-small button border-radius-4 margin-5px-all lg-margin-15px-bottom d-table d-lg-inline-block md-margin-lr-auto" style="font-size:17px;  margin-bottom:20px; color:white; font-weight:600;background-color:#ff9a00">
                                      <a href="mailto:reach1heart@gmail.com?subject=Mail" style="color:white">
                                     Click Here to Register /<br> More Information
                                     </a></button>
                                   <img src="images/newflyer.png" style="margin-top:5px; width:100%" >
-                                  </div>
-
-                                </div>
+                            </div>
+                    </div>
                 </div>
             </div>
-        </div>
-       </div>
       </div>
     </section>
 
